--- a/RecipeWebsite/package.json
+++ b/RecipeWebsite/package.json
@@ -20,7 +20,7 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
-    "bootstrap": ">=4.1.2",
+    "bootstrap": "^4.1.3",
     "bootswatch": "^4.1.3",
     "core-js": "^2.5.4",
     "ngx-cookie-service": "^2.0.0",
